/* stocks is client-server program to manage a household's food stock
 * Copyright (C) 2019  The stocks developers
 *
 * This file is part of the stocks program suite.
 *
 * stocks is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * stocks is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

plugins {
    id "java-library"
    id "checkstyle"
}

dependencies {
    implementation project(":client-core")
    implementation "javax.inject:javax.inject:${inject_version}"
    implementation "io.reactivex.rxjava3:rxjava:${rxjava_version}"
    implementation "com.google.auto.value:auto-value-annotations:${autovalue_version}"
    implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_extensions_version}"
    implementation "com.google.dagger:dagger:${dagger_version}"
    implementation "org.mockito:mockito-core:${mockito_version}"


    annotationProcessor "com.google.auto.value:auto-value:${autovalue_version}"
    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
}

group = "de.njsm.stocks"
version = "0.1"

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

test {
    useJUnitPlatform()
}
